--- a/Pyspark_Master/M4_Intermediate/M2_Week7_Cache.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M2_Week7_Cache.ipynb
@@ -123,6 +123,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3447e27",
+   "metadata": {},
+   "source": [
+    "When you call action it will cache all the patritions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "0d7abd1c",
@@ -221,6 +229,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "97fd1687",
+   "metadata": {},
+   "source": [
+    "Here , we remove all the cache and please check it under storage tab in spark UI"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b89c7916",
+   "metadata": {},
+   "source": [
+    "Cache only the required columns and order status is closed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "900bff2e",
@@ -292,6 +316,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "426d9fdb",
+   "metadata": {},
+   "source": [
+    "Here, Cache is applyed "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "c58ee139",
@@ -310,6 +342,30 @@
    ],
    "source": [
     "orders_df.select(\"order_id\", \"order_status\").filter(\"order_status == 'CLOSED'\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ab2a339",
+   "metadata": {},
+   "source": [
+    "Here, Cache is not applyed "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6847df37",
+   "metadata": {},
+   "source": [
+    "Because Filters is applyed first and then we are selective the columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94dfe4ca",
+   "metadata": {},
+   "source": [
+    "Moving filters ahead so that the data gets limited in the initial statges this is called as Predicate Push down"
    ]
   },
   {
@@ -334,6 +390,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b17f5b87",
+   "metadata": {},
+   "source": [
+    "Here Cache is not applyed"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61472325",
+   "metadata": {},
+   "source": [
+    "because cache is applyed only on the order status is closed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "56eb0ed4",
@@ -355,6 +427,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd3a1cb1",
+   "metadata": {},
+   "source": [
+    "Cache is not applyed"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "id": "11d56cbc",
@@ -373,6 +453,14 @@
    ],
    "source": [
     "orders_df.select(\"order_id\", \"order_status\").filter(\"order_status == 'COMPLETE'\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70756ea8",
+   "metadata": {},
+   "source": [
+    "we are taking cache on the below filter"
    ]
   },
   {
@@ -468,6 +556,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "33a4ac0f",
+   "metadata": {},
+   "source": [
+    "This is not cache with below conditions (order_id > 100)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "f54d6f9d",
@@ -489,6 +585,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "942e2977",
+   "metadata": {},
+   "source": [
+    "This is not hit the cache ( order_id > 10 )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "e17b74ff",
@@ -507,6 +611,14 @@
    ],
    "source": [
     "orders_df.select(\"order_status\").filter(\"order_id > 10\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f9ea18e2",
+   "metadata": {},
+   "source": [
+    "Taking Cache"
    ]
   },
   {
@@ -538,6 +650,14 @@
    ],
    "source": [
     "cached_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f04eaf1f",
+   "metadata": {},
+   "source": [
+    "It is hitting the Cache"
    ]
   },
   {
