--- a/Pyspark_Master/M4_Intermediate/M2_Week7_Cache.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M2_Week7_Cache.ipynb
@@ -241,7 +241,7 @@
    "id": "b89c7916",
    "metadata": {},
    "source": [
-    "Cache only the required columns and order status is closed"
+    "we are taking new Cache only the required columns and order status is closed"
    ]
   },
   {
@@ -320,7 +320,7 @@
    "id": "426d9fdb",
    "metadata": {},
    "source": [
-    "Here, Cache is applyed "
+    "Invoking the Cache"
    ]
   },
   {
@@ -349,7 +349,7 @@
    "id": "0ab2a339",
    "metadata": {},
    "source": [
-    "Here, Cache is not applyed "
+    "The Below code Cache will not hit"
    ]
   },
   {
@@ -394,7 +394,7 @@
    "id": "b17f5b87",
    "metadata": {},
    "source": [
-    "Here Cache is not applyed"
+    "Cache will not hit"
    ]
   },
   {
@@ -431,7 +431,7 @@
    "id": "cd3a1cb1",
    "metadata": {},
    "source": [
-    "Cache is not applyed"
+    "Cache will not hit"
    ]
   },
   {
@@ -560,7 +560,7 @@
    "id": "33a4ac0f",
    "metadata": {},
    "source": [
-    "This is not cache with below conditions (order_id > 100)"
+    "Cache will not hit due to with below conditions (order_id > 100)"
    ]
   },
   {
@@ -589,7 +589,7 @@
    "id": "942e2977",
    "metadata": {},
    "source": [
-    "This is not hit the cache ( order_id > 10 )"
+    "Cache will not hit"
    ]
   },
   {
@@ -609,6 +609,76 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "orders_df.select(\"order_status\").filter(\"order_id > 10\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5834c50e",
+   "metadata": {},
+   "source": [
+    "We are taking new cache with below conditions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "57a8898c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df.select(\"order_status\", \"order_id\").filter(\"order_id > 10\").cache()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "62c485c4",
+   "metadata": {},
+   "source": [
+    "Invoking the Cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f76a8b56",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df.select(\"order_status\", \"order_id\").filter(\"order_id > 10\").count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f23d0b5d",
+   "metadata": {},
+   "source": [
+    "Cache Will hit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c527cbd9",
+   "metadata": {},
+   "source": [
+    "Since order id filter is applyed later and select statement add order id explicitly"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec282432",
+   "metadata": {},
+   "source": [
+    "Please check it on the Spark UI under the SQL tab and click details and see the memory table plan"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d63e12a4",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "orders_df.select(\"order_status\").filter(\"order_id > 10\").count()"
    ]
@@ -682,12 +752,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "52ceb34b",
+   "cell_type": "markdown",
+   "id": "00b2a1e9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "Note : Whenever the analyze plan is different and it will not hit the cache"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e44a3965",
+   "metadata": {},
+   "source": [
+    "How do i check that cache in the UI ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e142fa32",
+   "metadata": {},
+   "source": [
+    "Under the SQL tab and open the latest in_memory table id"
+   ]
   }
  ],
  "metadata": {
