--- a/Pyspark_Master/M4_Intermediate/M3_Week7_Caching_spark_table.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M3_Week7_Caching_spark_table.ipynb
@@ -73,6 +73,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b1155231",
+   "metadata": {},
+   "source": [
+    "Writing the dataframe into table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "4fbc7722",
@@ -103,6 +111,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8d5c3ccc",
+   "metadata": {},
+   "source": [
+    "Taking Cache "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "6bdfee43",
@@ -123,6 +139,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "676e8a76",
+   "metadata": {},
+   "source": [
+    "Here Spark will create the multiple job internally if you fire the below query"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "da5c4f5a",
@@ -130,6 +154,14 @@
    "outputs": [],
    "source": [
     "spark.sql(\"select distinct(order_status) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2f2b9c6",
+   "metadata": {},
+   "source": [
+    "Here Spark will create single job for the below query"
    ]
   },
   {
@@ -143,6 +175,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7dc55f00",
+   "metadata": {},
+   "source": [
+    "Taking Un_Cache "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b9b9efb6",
@@ -150,6 +190,22 @@
    "outputs": [],
    "source": [
     "spark.sql(\"uncache table itv006277_cachingdemo_db.itv006277_orders1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "870b3d44",
+   "metadata": {},
+   "source": [
+    "By default saprk sql is eager "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b32b1e01",
+   "metadata": {},
+   "source": [
+    "changing from eager to lazy"
    ]
   },
   {
@@ -163,6 +219,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0bbaf361",
+   "metadata": {},
+   "source": [
+    "Now It will hit cache "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dfbb41f",
+   "metadata": {},
+   "source": [
+    "check it under the storage"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5252f701",
@@ -170,6 +242,14 @@
    "outputs": [],
    "source": [
     "spark.sql(\"select count(distinct(order_status)) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4f4ca48f",
+   "metadata": {},
+   "source": [
+    "This wil hit cache "
    ]
   },
   {
@@ -183,6 +263,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7bd57ac2",
+   "metadata": {},
+   "source": [
+    "As we know that we have created cache and If i inssert or any changes in data (cache)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd343ba5",
+   "metadata": {},
+   "source": [
+    "now cache data is not correct u"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "0416b38e",
@@ -190,6 +286,22 @@
    "outputs": [],
    "source": [
     "spark.sql(\"insert into itv006277_cachingdemo_db.itv006277_orders1 values(111111, '2023-05-29', 222222, 'BOOKED')\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97b2ef49",
+   "metadata": {},
+   "source": [
+    "The Below query will not hit cache and take time  and please check it "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "40a545d1",
+   "metadata": {},
+   "source": [
+    "we need to refresh tha cache"
    ]
   },
   {
@@ -203,19 +315,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0ab2589c",
+   "metadata": {},
+   "source": [
+    "If i run the below query and this will hit cache because the cache will correct"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b1a73012",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "spark.sql(\"select count(distinct(order_status)) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "690c010e",
+   "metadata": {},
+   "source": [
+    "How to uncache everything ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d19edeb6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"clear cache\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a19fbb67",
+   "metadata": {},
+   "source": [
+    "How to uncache specfic table ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c84cc6f4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.sql(\"uncache table itv006277_cachingdemo_db.itv006277_orders1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cabbfe40",
+   "metadata": {},
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Pyspark 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "pyspark2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -227,7 +391,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
