--- a/Pyspark_Master/M4_Intermediate/M4_Week7_Caching_sparkCatalog.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M4_Week7_Caching_sparkCatalog.ipynb
@@ -44,447 +44,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "ab9ee5e1",
-   "metadata": {},
-   "source": [
-    "### NOte: Please use your external id number in the place of \"itv006277\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "7ef4ad25",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"create database itv006277_cachingdemo_db\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "d00835c7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "orders_df.write.format(\"csv\").saveAsTable(\"itv006277_cachingdemo_db.itv006277_orders1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "dc411e73",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------------------+--------------------+-------+\n",
-      "|            col_name|           data_type|comment|\n",
-      "+--------------------+--------------------+-------+\n",
-      "|            order_id|              bigint|   null|\n",
-      "|          order_date|                date|   null|\n",
-      "|         customer_id|              bigint|   null|\n",
-      "|        order_status|              string|   null|\n",
-      "|                    |                    |       |\n",
-      "|# Detailed Table ...|                    |       |\n",
-      "|            Database|itv006277_caching...|       |\n",
-      "|               Table|   itv006277_orders1|       |\n",
-      "|               Owner|           itv006277|       |\n",
-      "|        Created Time|Wed Nov 01 02:06:...|       |\n",
-      "|         Last Access|Wed Dec 31 19:00:...|       |\n",
-      "|          Created By|         Spark 2.4.7|       |\n",
-      "|                Type|             MANAGED|       |\n",
-      "|            Provider|                 csv|       |\n",
-      "|    Table Properties|[transient_lastDd...|       |\n",
-      "|          Statistics|     840836625 bytes|       |\n",
-      "|            Location|hdfs://m01.itvers...|       |\n",
-      "|       Serde Library|org.apache.hadoop...|       |\n",
-      "|         InputFormat|org.apache.hadoop...|       |\n",
-      "|        OutputFormat|org.apache.hadoop...|       |\n",
-      "+--------------------+--------------------+-------+\n",
-      "only showing top 20 rows\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"describe extended itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "af2473d6",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+\n",
-      "|count(1)|\n",
-      "+--------+\n",
-      "|25831125|\n",
-      "+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select count(*) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "id": "93818f56",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"cache table itv006277_cachingdemo_db.itv006277_orders1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "e3075b7e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+--------+\n",
-      "|count(1)|\n",
-      "+--------+\n",
-      "|25831125|\n",
-      "+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select count(*) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "739426e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------+\n",
-      "|   order_status|\n",
-      "+---------------+\n",
-      "|PENDING_PAYMENT|\n",
-      "|       COMPLETE|\n",
-      "|        ON_HOLD|\n",
-      "| PAYMENT_REVIEW|\n",
-      "|     PROCESSING|\n",
-      "|         CLOSED|\n",
-      "|SUSPECTED_FRAUD|\n",
-      "|        PENDING|\n",
-      "|       CANCELED|\n",
-      "+---------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select distinct(order_status) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "7227ac75",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+\n",
-      "|count(DISTINCT order_status)|\n",
-      "+----------------------------+\n",
-      "|                           9|\n",
-      "+----------------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select count(distinct(order_status)) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "bd622d17",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"uncache table itv006277_cachingdemo_db.itv006277_orders1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "e09473f9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"cache lazy table itv006277_cachingdemo_db.itv006277_orders1\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "f99f67b7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+\n",
-      "|count(DISTINCT order_status)|\n",
-      "+----------------------------+\n",
-      "|                           9|\n",
-      "+----------------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select count(distinct(order_status)) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "96a6744b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+---------------+--------+\n",
-      "|   order_status|count(1)|\n",
-      "+---------------+--------+\n",
-      "|PENDING_PAYMENT| 5636250|\n",
-      "|       COMPLETE| 8587125|\n",
-      "|        ON_HOLD| 1424250|\n",
-      "| PAYMENT_REVIEW|  273375|\n",
-      "|     PROCESSING| 3103125|\n",
-      "|         CLOSED| 2833500|\n",
-      "|SUSPECTED_FRAUD|  584250|\n",
-      "|        PENDING| 2853750|\n",
-      "|       CANCELED|  535500|\n",
-      "+---------------+--------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select order_status, count(*) from itv006277_cachingdemo_db.itv006277_orders1 group by order_status\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "00aac6ec",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"insert into itv006277_cachingdemo_db.itv006277_orders1 values(111111, '2023-05-29', 222222, 'BOOKED')\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "75db0306",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "+----------------------------+\n",
-      "|count(DISTINCT order_status)|\n",
-      "+----------------------------+\n",
-      "|                          10|\n",
-      "+----------------------------+\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "spark.sql(\"select count(distinct(order_status)) from itv006277_cachingdemo_db.itv006277_orders1\").show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "id": "ec5b7e18",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"clear cache\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "32253f9e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table border='1'>\n",
-       "<tr><th></th></tr>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "++\n",
-       "||\n",
-       "++\n",
-       "++"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "spark.sql(\"cache table itv006277_cachingdemo_db.itv006277_orders1\")"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 20,
    "id": "42dd083b",
@@ -532,6 +91,16 @@
    ],
    "source": [
     "spark.sql(\"use itv006277_cachingdemo_db\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3e0e28f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "spark.catalog.currentDatabase()"
    ]
   },
   {
@@ -600,6 +169,20 @@
    "metadata": {},
    "source": [
     "### Note: You can use any orders file as path for csv location for creating a table "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ed532fdc",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dcd83e3a",
+   "metadata": {},
+   "source": [
+    "Creating External Table"
    ]
   },
   {
@@ -698,6 +281,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0a803ffd",
+   "metadata": {},
+   "source": [
+    "How Do i check the external table ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b53912da",
+   "metadata": {},
+   "source": [
+    "Under the  type columns external "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 56,
    "id": "e0d6f2e5",
@@ -737,6 +336,14 @@
    ],
    "source": [
     "spark.sql(\"describe extended itv006277_caching_demo_ext.itv006277_orders_ext\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fd23e79e",
+   "metadata": {},
+   "source": [
+    "Creating cache"
    ]
   },
   {
@@ -798,6 +405,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "61374df8",
+   "metadata": {},
+   "source": [
+    "Cache will not hit due to we did some changes in table"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 59,
    "id": "e3165793",
@@ -818,6 +433,14 @@
    ],
    "source": [
     "spark.sql(\"select count(*) from itv006277_caching_demo_ext.itv006277_orders_ext\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec282ba5",
+   "metadata": {},
+   "source": [
+    "How to refresh table ?"
    ]
   },
   {
@@ -883,11 +506,25 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6b44d1a8",
+   "cell_type": "markdown",
+   "id": "0550db89",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "When you insert suing insert command then spark will know that the cache is invalidated and in next subsequent use it will refresh it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0d1e195b",
+   "metadata": {},
+   "source": [
+    "but when we add or remove files in backend then spark cannot track it and we have to refresh the table manually"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e1260e43",
+   "metadata": {},
    "source": []
   }
  ],
