--- a/Pyspark_Master/M4_Intermediate/M5_Week7_persist.ipynb
+++ b/Pyspark_Master/M4_Intermediate/M5_Week7_persist.ipynb
@@ -125,6 +125,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "da8f8d6c",
+   "metadata": {},
+   "source": [
+    "Please check under the storage tab in spark UI"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "7d68465b",
@@ -141,6 +149,24 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "orders_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1da940cf",
+   "metadata": {},
+   "source": [
+    "It will hit the cache"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "db88de33",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "orders_df.count()"
    ]
@@ -373,6 +399,14 @@
    ],
    "source": [
     "orders_df.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "70c91be5",
+   "metadata": {},
+   "source": [
+    "we can also persist like this"
    ]
   },
   {
