--- a/Pyspark_Master/M4_Intermediate/Week8_M1_column_accessing.ipynb
+++ b/Pyspark_Master/M4_Intermediate/Week8_M1_column_accessing.ipynb
@@ -182,6 +182,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "cd6623dd",
+   "metadata": {},
+   "source": [
+    "Various Types Accessing the columns"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "0d03a66c",
@@ -225,6 +233,62 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c4fd5ac8",
+   "metadata": {},
+   "source": [
+    "\"order_id\" = columns string"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d897e2ca",
+   "metadata": {},
+   "source": [
+    "column('cust_id') = column object"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a2cbbaaf",
+   "metadata": {},
+   "source": [
+    "orders_df.order_date "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "75534236",
+   "metadata": {},
+   "source": [
+    "When we same column in both dataframe to avoid the dis-ambiguity then we specfiy the dataframe as prefix "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bac4c31",
+   "metadata": {},
+   "source": [
+    "expr(\"order_status\") = column expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8944c229",
+   "metadata": {},
+   "source": [
+    "If i want to like SQL kind of expression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f894c723",
+   "metadata": {},
+   "source": [
+    "If i want to change the values in dataframe then i can use the column expression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "7775ad90",
@@ -264,7 +328,15 @@
     }
    ],
    "source": [
-    "orders_df.select(\"order_id\", \"cust_id\", expr(\"cust_id + 1\")).show()"
+    "orders_df.select(\"order_id\", \"cust_id\", expr(\"cust_id + 1 as new_cust_id\")).show() "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d79b3108",
+   "metadata": {},
+   "source": [
+    "SQL statement on the dataframe"
    ]
   },
   {
