--- a/Pyspark_Master/M5_Master/M2_Aggregations.ipynb
+++ b/Pyspark_Master/M5_Master/M2_Aggregations.ipynb
@@ -54,6 +54,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7b73361e",
+   "metadata": {},
+   "source": [
+    "Aggregation on Dataframe using programatic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "47dce71b",
@@ -64,6 +72,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "613a77ae",
+   "metadata": {},
+   "source": [
+    "Aggregations on Dataframe using SQL expression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "44aa4488",
@@ -71,6 +87,15 @@
    "outputs": [],
    "source": [
     "orders_df.selectExpr(\"count(*) as row_count\", \"count(distinct(InvoiceNo)) as unique_invoice\", \"sum(Quantity) as total_quantity\", \"avg(unitPrice) as avg_price\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "00625bda",
+   "metadata": {},
+   "source": [
+    "\n",
+    "Aggregations SQL table"
    ]
   },
   {
