--- a/Pyspark_Master/M5_Master/M3_Grouping_Agg.ipynb
+++ b/Pyspark_Master/M5_Master/M3_Grouping_Agg.ipynb
@@ -87,6 +87,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7360e6d7",
+   "metadata": {},
+   "source": [
+    "Aggregation on Dataframe using programatic"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "9ea0421e",
@@ -141,6 +149,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "81c13faa",
+   "metadata": {},
+   "source": [
+    "Aggregations on Dataframe using SQL expression"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "5a544506",
@@ -192,6 +208,14 @@
    ],
    "source": [
     "summary_df1.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "728af674",
+   "metadata": {},
+   "source": [
+    "Aggregations SQL table"
    ]
   },
   {
