--- a/Pyspark_Master/M5_Master/M6_logFiles_and_PivotTable.ipynb
+++ b/Pyspark_Master/M5_Master/M6_logFiles_and_PivotTable.ipynb
@@ -800,6 +800,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4c94b0a8",
+   "metadata": {},
+   "source": [
+    "Pivot "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 30,
    "id": "06beda0e",
