--- a/Pyspark_Master/M6_Professional/M1_dataframe_writer.ipynb
+++ b/Pyspark_Master/M6_Professional/M1_dataframe_writer.ipynb
@@ -86,6 +86,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "baacbe09",
+   "metadata": {},
+   "source": [
+    "How to see the partitions ?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "2945812c",
@@ -108,6 +116,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "75e7a049",
+   "metadata": {},
+   "source": [
+    "How to write the dataframe ?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cc6c928b",
    "metadata": {},
    "source": [
@@ -126,6 +142,14 @@
     ".mode(\"overwrite\") \\\n",
     ".option(\"path\",\"/user/itv006277/sparkwriterdemo1\") \\\n",
     ".save()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b5dd8ce",
+   "metadata": {},
+   "source": [
+    "Default format is parquet"
    ]
   },
   {
@@ -184,12 +208,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "882020dc",
+   "metadata": {},
+   "source": [
+    "If we use avro error will come"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "46086702",
+   "metadata": {},
+   "source": [
+    "Avro = We required install few things for avro"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "587ca36f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "orders_df.write \\\n",
+    ".format(\"avro\") \\\n",
+    ".mode(\"overwrite\") \\\n",
+    ".option(\"path\",\"/user/itv006277/sparkwriterdemo3\") \\\n",
+    ".save()"
+   ]
   },
   {
    "cell_type": "code",
