--- a/Pyspark_Master/M6_Professional/M2_partitionBy.ipynb
+++ b/Pyspark_Master/M6_Professional/M2_partitionBy.ipynb
@@ -149,6 +149,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "510d02d3",
+   "metadata": {},
+   "source": [
+    "PartitionBy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "8859bd90",
@@ -318,7 +326,31 @@
     }
    ],
    "source": [
-    "spark.sql(\"select count(*) from orders where cust_id = 8827\")"
+    "spark.sql(\"select count(*) from orders where cust_id = 8827\")  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61c4d5bd",
+   "metadata": {},
+   "source": [
+    "1) order_status = 'CLOSED' and cust_id = 8827\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e6cb9ee2",
+   "metadata": {},
+   "source": [
+    "2) cust_id = 8827\" and order_status = 'CLOSED'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48dbfae4",
+   "metadata": {},
+   "source": [
+    "Both will give you same performance"
    ]
   },
   {
@@ -384,6 +416,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a3520d2f",
+   "metadata": {},
+   "source": [
+    "Approach 2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "74ee68da",
@@ -393,7 +433,7 @@
     "customers_df = spark.read \\\n",
     ".format(\"csv\") \\\n",
     ".option(\"inferSchema\", True) \\\n",
-    ".load(\"/public/trendytech/retail_db/customers/part-00000\")"
+    ".load(\"/public/trendytech/retail_db/customers/part-00000\") "
    ]
   },
   {
@@ -404,6 +444,14 @@
    "outputs": [],
    "source": [
     "customers_final_df = customers_df.toDF(\"customer_id\", \"customer_fname\", \"customer_lname\", \"customer_email\", \"customer_password\", \"customer_street\", \"customer_city\", \"customer_state\", \"customer_zipcode\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa00653b",
+   "metadata": {},
+   "source": [
+    "PartitionBy tow attribute using parquet data format"
    ]
   },
   {
@@ -498,6 +546,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a5b2a6d0",
+   "metadata": {},
+   "source": [
+    "This is small file due to that we have 1 partition"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "45ac0336",
@@ -505,6 +561,30 @@
    "outputs": [],
    "source": [
     "customers_df.createOrReplaceTempView(\"customers\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77593fc2",
+   "metadata": {},
+   "source": [
+    "This conditions customer_state = 'PR' and customer_id = 19"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b77a099c",
+   "metadata": {},
+   "source": [
+    "will scan entire table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2a8dfdb1",
+   "metadata": {},
+   "source": [
+    "partionBy columns are different"
    ]
   },
   {
@@ -531,6 +611,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c2a8666f",
+   "metadata": {},
+   "source": [
+    "This will not scan entire dataframe both column are included in partitionBy columns"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "077940fa",
+   "metadata": {},
+   "source": [
+    "It will scan single folder"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 26,
    "id": "b0e1d4d1",
@@ -551,6 +647,14 @@
    ],
    "source": [
     "spark.sql(\"select count(*) from customers where customer_state = 'PR' and customer_city = 'Caguas'\").show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8e7e334b",
+   "metadata": {},
+   "source": [
+    "It will scan only one files"
    ]
   },
   {
