--- a/Pyspark_Master/M6_Professional/M3_bucketing.ipynb
+++ b/Pyspark_Master/M6_Professional/M3_bucketing.ipynb
@@ -87,6 +87,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c038a5a",
+   "metadata": {},
+   "source": [
+    "bucketingBy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "id": "18819422",
@@ -127,6 +135,14 @@
     ".mode(\"overwrite\") \\\n",
     ".bucketBy(4, \"customer_id\") \\\n",
     ".saveAsTable(\"itv006277_bucketingdb.customersnew\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "861fcdf6",
+   "metadata": {},
+   "source": [
+    "The Below query will scan all the table"
    ]
   },
   {
