--- a/Pyspark_Master/M6_Professional/M4_spark_Internals1.ipynb
+++ b/Pyspark_Master/M6_Professional/M4_spark_Internals1.ipynb
@@ -131,6 +131,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e9f20d56",
+   "metadata": {},
+   "source": [
+    "defaultParallelism is based on the systems CPU core"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "adcbd20d",
@@ -148,7 +156,23 @@
     }
    ],
    "source": [
-    "spark.sparkContext.defaultParallelism"
+    "spark.sparkContext.defaultParallelism "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ebab6e7e",
+   "metadata": {},
+   "source": [
+    "defaultParallelism is not constant and if we use more resources more will be there"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3d980cc",
+   "metadata": {},
+   "source": [
+    "It is dynamic value"
    ]
   },
   {
@@ -211,6 +235,14 @@
    ],
    "source": [
     "spark.sql(\"select count(distinct(order_status)) from orders\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3886248c",
+   "metadata": {},
+   "source": [
+    "Plz , see the notes how the distinct is working"
    ]
   },
   {
