--- a/Pyspark_Master/M6_Professional/M8_Default_Parallelisim_Partitions.ipynb
+++ b/Pyspark_Master/M6_Professional/M8_Default_Parallelisim_Partitions.ipynb
@@ -177,7 +177,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "new_orders_df = orders_df.repartition(1)"
+    "new_orders_df = orders_df.repartition(1) "
    ]
   },
   {
@@ -199,6 +199,14 @@
    ],
    "source": [
     "new_orders_df.rdd.getNumPartitions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eea906d6",
+   "metadata": {},
+   "source": [
+    "Compression Techniques"
    ]
   },
   {
@@ -293,6 +301,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "382d89a7",
+   "metadata": {},
+   "source": [
+    "Snappy"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "b1ee16de",
@@ -381,6 +397,14 @@
    ],
    "source": [
     "orders_df.rdd.getNumPartitions()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2692c1bf",
+   "metadata": {},
+   "source": [
+    "Parquet"
    ]
   },
   {
@@ -536,6 +560,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "699d40a2",
+   "metadata": {},
+   "source": [
+    "Reading the multiple files"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 27,
    "id": "2e983571",
@@ -545,7 +577,7 @@
     "orders_df = spark.read \\\n",
     ".format(\"csv\") \\\n",
     ".schema(orders_schema) \\\n",
-    ".load(\"orders_final\")"
+    ".load(\"orders_final\") "
    ]
   },
   {
@@ -609,7 +641,7 @@
     }
    ],
    "source": [
-    "orders_df.rdd.getNumPartitions()"
+    "orders_df.rdd.getNumPartitions() "
    ]
   },
   {
@@ -630,7 +662,7 @@
     }
    ],
    "source": [
-    "spark.conf.get(\"spark.sql.files.openCostInBytes\")"
+    "spark.conf.get(\"spark.sql.files.openCostInBytes\") "
    ]
   },
   {
@@ -651,7 +683,7 @@
     }
    ],
    "source": [
-    "4194304/1024"
+    "4194304/1024 "
    ]
   },
   {
@@ -672,7 +704,7 @@
     }
    ],
    "source": [
-    "4096.0/1024"
+    "4096.0/1024 "
    ]
   },
   {
@@ -682,7 +714,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_orders_df = new_orders_df.repartition(500)"
+    "final_orders_df = new_orders_df.repartition(500) "
    ]
   },
   {
